# ai-alert-system

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  plan.md
.github/workflows/: ci.yml
examples/alerts/: db-connections.json  high-error-rate.json  high-latency.json
runbooks/: database-connection-exhaustion.md  deploy-rollback.md  high-error-rate.md  high-latency.md
scripts/: make_demo_repo.sh
src/: alert.rs  commits.rs  config.rs  impact.rs  incident.rs  llm.rs  main.rs  pipeline.rs  postmortem.rs  runbooks.rs  slack.rs
